# EMTradingAgent

./: pyproject.toml
src/emta/core/: agent.py
src/emta/models/: trading.py
