[project]
name = "emta"
version = "0.5.4"
description = "Easy Money Trading Agent"
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
keywords = ["trade", "trade api", "交易", "东方财富", "东财", "交易机器人", "交易代理", "自动交易",  "自动化交易", "交易API", ]
authors = [
    { name = "zhou bo", email = "wokspc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6",
    "ddddocr>=1.5.6",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]
ignore_missing_imports = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
